# llm_project

./: .env  README.md  main.py  pyproject.toml
basicchatbot/: codechatbot.ipynb
